# MatchOracle

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 478127bb6eff_initial_schema.py  c1d2e3f4a5b6_add_kv_store.py  dd35aa8af719_add_prediction_score_detail.py
api/: index.py
app/: __init__.py  config.py  logging_config.py  main.py
app/agents/: __init__.py  _heuristics.py  _signals.py  base.py  contextual.py  expert.py  historical.py  market.py  mock_agent.py  registry.py  risk.py  trend.py
app/api/: __init__.py  router.py
app/cache/: __init__.py  base.py  memory_cache.py  postgres_cache.py  redis_cache.py
app/connectors/: __init__.py  base.py  openligadb.py  worldcup.py
app/db/: __init__.py  base.py  models.py
app/llm/: __init__.py  provider.py  router.py
app/mcp/: __init__.py  manager.py  sources.py
app/mpp/: __init__.py  auth.py  client.py
app/observability/: __init__.py  metrics.py
app/orchestration/: __init__.py  aggregation.py  explanation.py  graph.py  service.py  state.py  weights.py
app/prediction/: __init__.py  accuracy.py  benchmark.py  calibration.py  feedback.py  group.py  params.py  score.py  tournament.py
app/repositories/: __init__.py  base.py  connector_repository.py  prediction_repository.py  user_repository.py
app/schemas/: __init__.py  agent.py  auth.py  benchmark.py  common.py  connector.py  feedback.py  mcp.py  prediction.py  worldcup.py
app/security/: __init__.py  audit.py  passwords.py  principal.py  (+2 more)
config/: mcp_servers.json
deploy/: README.md  supabase_schema.sql
scripts/: mpp_club_map.json  wc_full_predictions.py
tests/: conftest.py  test_accuracy.py  test_agents.py  test_aggregation.py  test_api_predictions.py  test_auth.py  test_autonomous.py  test_benchmark.py  test_cache.py  test_calibration.py  test_connector_openligadb.py  test_connector_worldcup.py  test_cron.py  test_db_layer.py  test_explanation.py  test_feedback.py  test_group.py  test_health.py  test_llm.py  test_mcp.py  test_migrations.py  test_mpp.py  test_observability.py  test_orchestration.py  test_params.py  test_prediction_service.py  test_refresh.py  test_score.py  test_tournament.py  test_weights.py  test_workers.py
(+23 files in other folders)
